[fix] 페인트 휠 기능 수정
수정
* 그림 그리는 도중 휠 사용시 발생하는 오류 수정
* 스크롤바 색상 변경

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -64,7 +64,7 @@ QScrollBar:horizontal {
     margin: 0px 22px 0 22px;
 }
 QScrollBar::handle:horizontal {
-    background: white;
+    background: #666;
     min-width: 20px;
 }
 QScrollBar::add-line:horizontal {
@@ -92,7 +92,7 @@ QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal {
      margin: 22px 0 22px 0;
  }
  QScrollBar::handle:vertical {
-     background: white;
+     background: #666;
      min-height: 20px;
  }
  QScrollBar::add-line:vertical {
