--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -32,6 +32,18 @@ QMessageBox QLabel {
     color: #fff;
 }
 
+QDialog {
+background: #333;
+}
+
+QSlider::handle:horizontal {
+    background: #fff;
+    border: 1px solid #5c5c5c;
+    width: 18px;
+    margin: -2px 0; /* handle is placed by default on the contents rect of the groove. Expand outside the groove */
+    border-radius: 3px;
+}
+
 QMenuBar {
 background:#444;
 color:#fff;
@@ -385,6 +397,8 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
      <string>Edit</string>
     </property>
     <addaction name="actionRGB"/>
+    <addaction name="separator"/>
+    <addaction name="actionResizing"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
@@ -407,6 +421,11 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
   <action name="actionRGB">
    <property name="text">
     <string>RGB</string>
+   </property>
+  </action>
+  <action name="actionResizing">
+   <property name="text">
+    <string>Resize</string>
    </property>
   </action>
  </widget>
