--- a/src/image_resizer.ui
+++ b/src/image_resizer.ui
@@ -6,33 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>311</width>
-    <height>118</height>
+    <width>231</width>
+    <height>151</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLineEdit" name="lineEdit">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>20</y>
-     <width>161</width>
-     <height>20</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_2">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>50</y>
-     <width>161</width>
-     <height>20</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
@@ -62,8 +42,8 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>80</y>
+     <x>90</x>
+     <y>120</y>
      <width>61</width>
      <height>23</height>
     </rect>
@@ -75,8 +55,8 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>80</y>
+     <x>160</x>
+     <y>120</y>
      <width>61</width>
      <height>23</height>
     </rect>
@@ -88,14 +68,49 @@
   <widget class="QCheckBox" name="checkBox">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>30</y>
-     <width>61</width>
-     <height>31</height>
+     <x>10</x>
+     <y>80</y>
+     <width>211</width>
+     <height>21</height>
     </rect>
    </property>
+   <property name="layoutDirection">
+    <enum>Qt::RightToLeft</enum>
+   </property>
    <property name="text">
-    <string>Ratio</string>
+    <string>Remain Ratio</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="spinWidth">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>20</y>
+     <width>151</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="minimum">
+    <number>1</number>
+   </property>
+   <property name="maximum">
+    <number>30000</number>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="spinHeight">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>50</y>
+     <width>151</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="minimum">
+    <number>1</number>
+   </property>
+   <property name="maximum">
+    <number>30000</number>
    </property>
   </widget>
  </widget>
