--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -36,6 +36,14 @@ QDialog {
 background: #333;
 }
 
+QDialog QLabel{
+color:#fff;
+}
+
+QDialog QCheckBox{
+color:#fff;
+}
+
 QSlider::handle:horizontal {
     background: #fff;
     border: 1px solid #5c5c5c;
@@ -396,12 +404,22 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
     <property name="title">
      <string>Edit</string>
     </property>
+    <addaction name="actionHue"/>
     <addaction name="actionRGB"/>
     <addaction name="separator"/>
     <addaction name="actionResizing"/>
    </widget>
+   <widget class="QMenu" name="menuOption">
+    <property name="title">
+     <string>Option</string>
+    </property>
+    <addaction name="actionSetting"/>
+    <addaction name="separator"/>
+    <addaction name="actionInfo"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
+   <addaction name="menuOption"/>
   </widget>
   <action name="actionSave">
    <property name="text">
@@ -426,6 +444,21 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
   <action name="actionResizing">
    <property name="text">
     <string>Resize</string>
+   </property>
+  </action>
+  <action name="actionHue">
+   <property name="text">
+    <string>Hue</string>
+   </property>
+  </action>
+  <action name="actionSetting">
+   <property name="text">
+    <string>Setting</string>
+   </property>
+  </action>
+  <action name="actionInfo">
+   <property name="text">
+    <string>Info</string>
    </property>
   </action>
  </widget>
