[feat] 옵션 설정, 빠른 메뉴
추가
+ 화이트와 퍼플 테마
+ RGB 변경시 프리뷰 이미지의 해상도 지정 기능(옵션에서 선택)
+ 인포메이션 창
+ 메인 윈도우 마우스 오른쪽 클릭시 빠른 메뉴열기 기능
+ 단축키

수정
+ RGB 선택창의 높이
+ 다이얼로그 크기 변경 불가
+ 이미지 열지 않은 경우 예외처리
+ 쓰지 않은 아규먼트 Q_UNUSED 처리

--- a/src/image_resizer.ui
+++ b/src/image_resizer.ui
@@ -49,7 +49,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Save</string>
+    <string>Apply</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
@@ -78,7 +78,7 @@
     <enum>Qt::RightToLeft</enum>
    </property>
    <property name="text">
-    <string>Remain Ratio</string>
+    <string>Keep rates</string>
    </property>
   </widget>
   <widget class="QSpinBox" name="spinWidth">
