--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -20,148 +20,7 @@
    <string>ImageEditor</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QMainWindow {
-background:#444;
-}
-
-QMessageBox {
-background:#444;
-}
-
-QMessageBox QLabel {
-    color: #fff;
-}
-
-QDialog {
-background: #333;
-}
-
-QDialog QLabel{
-color:#fff;
-}
-
-QDialog QCheckBox{
-color:#fff;
-}
-
-QSlider::handle:horizontal {
-    background: #fff;
-    border: 1px solid #5c5c5c;
-    width: 18px;
-    margin: -2px 0; /* handle is placed by default on the contents rect of the groove. Expand outside the groove */
-    border-radius: 3px;
-}
-
-QMenuBar {
-background:#444;
-color:#fff;
-}
-
-QMenuBar::item:selected {
-    background: #555;
-}
-
-QMenuBar::item:pressed {
-    background: #777;
-}
-
-QMenu {
-	color: #fff;
-    background-color: #333;
-    border: 1px solid black;
-}
-
-QMenu::item {
-    background-color: transparent;
-}
-
-QMenu::item:selected {
-    background-color: #555;
-}
-
-QGraphicsView {
-background:#222;
-}
-
-QSpinBox {
-background:#222;
-color:#fff;
-}
-QSpinBox::down-button {
-    subcontrol-origin: border;
-}
-
-QPushButton {
-background:rgba(0,0,0,.0);
-color:#aaa;
-font-weight:bold;
-text-align:center;
-}
-QPushButton:hover {
-color:#ccc;
-}
-QPushButton:pressed {
-color:#fff;
-}
-QPushButton:checked {
-color:#fff;
-}
-
-QScrollBar:horizontal {
-    border: 0px solid grey;
-    background: #333;
-    height: 15px;
-    margin: 0px 22px 0 22px;
-}
-QScrollBar::handle:horizontal {
-    background: #666;
-    min-width: 20px;
-}
-QScrollBar::add-line:horizontal {
-    border: 0px solid grey;
-    background: #555;
-    width: 20px;
-    subcontrol-position: right;
-    subcontrol-origin: margin;
-}
-QScrollBar::sub-line:horizontal {
-    border: 0px solid grey;
-    background: #555;
-    width: 20px;
-    subcontrol-position: left;
-    subcontrol-origin: margin;
-}
-QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal {
-    background: none;
-}
-
- QScrollBar:vertical {
-     border: 0px solid grey;
-     background: #333;
-     width: 15px;
-     margin: 22px 0 22px 0;
- }
- QScrollBar::handle:vertical {
-     background: #666;
-     min-height: 20px;
- }
- QScrollBar::add-line:vertical {
-     border: 0px solid grey;
-     background: #555;
-     height: 20px;
-     subcontrol-position: bottom;
-     subcontrol-origin: margin;
- }
- QScrollBar::sub-line:vertical {
-     border: 0px solid grey;
-     background: #555;
-     height: 20px;
-     subcontrol-position: top;
-     subcontrol-origin: margin;
- }
-QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
-    background: none;
-}</string>
+   <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QPushButton" name="lineBtn">
@@ -404,22 +263,22 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
     <property name="title">
      <string>Edit</string>
     </property>
-    <addaction name="actionHue"/>
     <addaction name="actionRGB"/>
+    <addaction name="actionHue"/>
     <addaction name="separator"/>
     <addaction name="actionResizing"/>
    </widget>
-   <widget class="QMenu" name="menuOption">
+   <widget class="QMenu" name="menuSetting">
     <property name="title">
-     <string>Option</string>
+     <string>Setting</string>
     </property>
-    <addaction name="actionSetting"/>
+    <addaction name="actionOption"/>
     <addaction name="separator"/>
     <addaction name="actionInfo"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
-   <addaction name="menuOption"/>
+   <addaction name="menuSetting"/>
   </widget>
   <action name="actionSave">
    <property name="text">
@@ -451,14 +310,14 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
     <string>Hue</string>
    </property>
   </action>
-  <action name="actionSetting">
+  <action name="actionOption">
    <property name="text">
-    <string>Setting</string>
+    <string>Option</string>
    </property>
   </action>
   <action name="actionInfo">
    <property name="text">
-    <string>Info</string>
+    <string>Infomation</string>
    </property>
   </action>
  </widget>
