--- a/src/option.ui
+++ b/src/option.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
-    <height>398</height>
+    <width>469</width>
+    <height>209</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QPushButton" name="CloseBtn">
    <property name="geometry">
     <rect>
-     <x>630</x>
-     <y>370</y>
+     <x>400</x>
+     <y>180</y>
      <width>61</width>
      <height>23</height>
     </rect>
@@ -26,7 +26,7 @@
     <string>Cancel</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="ColorTab">
    <property name="geometry">
     <rect>
      <x>240</x>
@@ -43,7 +43,7 @@ border:1px solid #ccc;</string>
     <string>Color Change</string>
    </property>
   </widget>
-  <widget class="QSpinBox" name="spinBox">
+  <widget class="QSpinBox" name="ColorPreviewSize">
    <property name="geometry">
     <rect>
      <x>390</x>
@@ -56,13 +56,13 @@ border:1px solid #ccc;</string>
     <number>1</number>
    </property>
    <property name="maximum">
-    <number>9999</number>
+    <number>99999</number>
    </property>
    <property name="value">
     <number>1080</number>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkBox">
+  <widget class="QCheckBox" name="SaveAsk">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -75,11 +75,11 @@ border:1px solid #ccc;</string>
     <string>Don't ask when saving.</string>
    </property>
   </widget>
-  <widget class="QCheckBox" name="checkBox_2">
+  <widget class="QCheckBox" name="ResizeRate">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>40</y>
+     <x>10</x>
+     <y>100</y>
      <width>221</width>
      <height>20</height>
     </rect>
@@ -88,7 +88,7 @@ border:1px solid #ccc;</string>
     <string>Do not keep rates automatically.</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="ColorPreviewSizeLabel">
    <property name="geometry">
     <rect>
      <x>240</x>
@@ -101,7 +101,7 @@ border:1px solid #ccc;</string>
     <string>Preview Size(Height)</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QLabel" name="SaveTab">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -118,11 +118,11 @@ border:1px solid #ccc;</string>
     <string>Save</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
+  <widget class="QLabel" name="ResizeTab">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>10</y>
+     <x>10</x>
+     <y>70</y>
      <width>221</width>
      <height>21</height>
     </rect>
@@ -135,11 +135,11 @@ border:1px solid #ccc;</string>
     <string>Resize</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_5">
+  <widget class="QLabel" name="ThemeTab">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>80</y>
+     <x>240</x>
+     <y>70</y>
      <width>221</width>
      <height>21</height>
     </rect>
@@ -152,11 +152,11 @@ border:1px solid #ccc;</string>
     <string>Theme</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="BlackTheme">
+  <widget class="QPushButton" name="ThemeBlack">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>110</y>
+     <x>250</x>
+     <y>100</y>
      <width>61</width>
      <height>61</height>
     </rect>
@@ -171,11 +171,11 @@ border-radius: 30px;</string>
     <string>Black</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="WhiteTheme">
+  <widget class="QPushButton" name="ThemeWhie">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>110</y>
+     <x>320</x>
+     <y>100</y>
      <width>61</width>
      <height>61</height>
     </rect>
@@ -190,11 +190,11 @@ border-radius: 30px;</string>
     <string>White</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="PurpleTheme">
+  <widget class="QPushButton" name="ThemePurple">
    <property name="geometry">
     <rect>
-     <x>620</x>
-     <y>110</y>
+     <x>390</x>
+     <y>100</y>
      <width>61</width>
      <height>61</height>
     </rect>
@@ -210,6 +210,15 @@ border-radius: 30px;</string>
    </property>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>SaveAsk</tabstop>
+  <tabstop>CloseBtn</tabstop>
+  <tabstop>ResizeRate</tabstop>
+  <tabstop>ThemePurple</tabstop>
+  <tabstop>ThemeWhie</tabstop>
+  <tabstop>ThemeBlack</tabstop>
+  <tabstop>ColorPreviewSize</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
