--- a/src/option.ui
+++ b/src/option.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>469</width>
-    <height>209</height>
+    <height>232</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>400</x>
-     <y>180</y>
+     <y>200</y>
      <width>61</width>
      <height>23</height>
     </rect>
@@ -26,12 +26,12 @@
     <string>Cancel</string>
    </property>
   </widget>
-  <widget class="QLabel" name="ColorTab">
+  <widget class="QLabel" name="CPerformaceTab">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>10</y>
-     <width>221</width>
+     <x>10</x>
+     <y>140</y>
+     <width>351</width>
      <height>21</height>
     </rect>
    </property>
@@ -40,14 +40,14 @@
 border:1px solid #ccc;</string>
    </property>
    <property name="text">
-    <string>Color Change</string>
+    <string>Perfomance</string>
    </property>
   </widget>
   <widget class="QSpinBox" name="ColorPreviewSize">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>40</y>
+     <x>290</x>
+     <y>170</y>
      <width>71</width>
      <height>22</height>
     </rect>
@@ -91,14 +91,14 @@ border:1px solid #ccc;</string>
   <widget class="QLabel" name="ColorPreviewSizeLabel">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>40</y>
-     <width>141</width>
+     <x>10</x>
+     <y>170</y>
+     <width>271</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
-    <string>Preview Size(Height)</string>
+    <string>RGB Color Preview Size [Heignt](CPU)</string>
    </property>
   </widget>
   <widget class="QLabel" name="SaveTab">
@@ -139,7 +139,7 @@ border:1px solid #ccc;</string>
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>70</y>
+     <y>10</y>
      <width>221</width>
      <height>21</height>
     </rect>
@@ -156,7 +156,7 @@ border:1px solid #ccc;</string>
    <property name="geometry">
     <rect>
      <x>250</x>
-     <y>100</y>
+     <y>50</y>
      <width>61</width>
      <height>61</height>
     </rect>
@@ -175,7 +175,7 @@ border-radius: 30px;</string>
    <property name="geometry">
     <rect>
      <x>320</x>
-     <y>100</y>
+     <y>50</y>
      <width>61</width>
      <height>61</height>
     </rect>
@@ -194,7 +194,7 @@ border-radius: 30px;</string>
    <property name="geometry">
     <rect>
      <x>390</x>
-     <y>100</y>
+     <y>50</y>
      <width>61</width>
      <height>61</height>
     </rect>
@@ -207,6 +207,38 @@ border-radius: 30px;</string>
    </property>
    <property name="text">
     <string>Purple</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="CUndoSizeLabel">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>200</y>
+     <width>271</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Number of 'undo' [Restart required](Memory)</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="CUndoSize">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>200</y>
+     <width>71</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="minimum">
+    <number>1</number>
+   </property>
+   <property name="maximum">
+    <number>50</number>
+   </property>
+   <property name="value">
+    <number>10</number>
    </property>
   </widget>
  </widget>
