--- a/src/option.ui
+++ b/src/option.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>469</width>
-    <height>232</height>
+    <height>270</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>400</x>
-     <y>200</y>
+     <y>240</y>
      <width>61</width>
      <height>23</height>
     </rect>
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>140</y>
+     <y>180</y>
      <width>351</width>
      <height>21</height>
     </rect>
@@ -47,7 +47,7 @@ border:1px solid #ccc;</string>
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>170</y>
+     <y>210</y>
      <width>71</width>
      <height>22</height>
     </rect>
@@ -79,7 +79,7 @@ border:1px solid #ccc;</string>
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>100</y>
+     <y>140</y>
      <width>221</width>
      <height>20</height>
     </rect>
@@ -92,7 +92,7 @@ border:1px solid #ccc;</string>
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>170</y>
+     <y>210</y>
      <width>271</width>
      <height>21</height>
     </rect>
@@ -122,7 +122,7 @@ border:1px solid #ccc;</string>
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>70</y>
+     <y>110</y>
      <width>221</width>
      <height>21</height>
     </rect>
@@ -156,7 +156,7 @@ border:1px solid #ccc;</string>
    <property name="geometry">
     <rect>
      <x>250</x>
-     <y>50</y>
+     <y>70</y>
      <width>61</width>
      <height>61</height>
     </rect>
@@ -175,7 +175,7 @@ border-radius: 30px;</string>
    <property name="geometry">
     <rect>
      <x>320</x>
-     <y>50</y>
+     <y>70</y>
      <width>61</width>
      <height>61</height>
     </rect>
@@ -194,7 +194,7 @@ border-radius: 30px;</string>
    <property name="geometry">
     <rect>
      <x>390</x>
-     <y>50</y>
+     <y>70</y>
      <width>61</width>
      <height>61</height>
     </rect>
@@ -213,7 +213,7 @@ border-radius: 30px;</string>
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>200</y>
+     <y>240</y>
      <width>271</width>
      <height>21</height>
     </rect>
@@ -226,7 +226,7 @@ border-radius: 30px;</string>
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>200</y>
+     <y>240</y>
      <width>71</width>
      <height>22</height>
     </rect>
@@ -239,6 +239,38 @@ border-radius: 30px;</string>
    </property>
    <property name="value">
     <number>10</number>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="SaveCompress">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>70</y>
+     <width>51</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="minimum">
+    <number>1</number>
+   </property>
+   <property name="maximum">
+    <number>100</number>
+   </property>
+   <property name="value">
+    <number>100</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="ColorPreviewSizeLabel_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>70</y>
+     <width>161</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Compressibility(only .jpg)</string>
    </property>
   </widget>
  </widget>
