--- a/src/image_editor.ui
+++ b/src/image_editor.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>ImageEditor</class>
+ <widget class="QMainWindow" name="ImageEditor">
   <property name="geometry">
    <rect>
     <x>0</x>
